--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,10 @@ name: CI/CD Workflow
 on:
   push:
     branches:
-      - lab/yacine
+      - main
   pull_request:
     branches:
-      - lab/yacine
+      - main
 
 jobs:
   build-test:
